Added company and worker register!

--- a/views/company/login.hbs
+++ b/views/company/login.hbs
@@ -1,5 +1,5 @@
 <div class="mx-auto mt-4 w-25">
-  <form action="/user/login" method="POST">
+  <form action="/company/login" method="POST">
     <h2 class="text-center mb-4">Employees login</h2>
     <div class="form-group">
       <label for="email">Email address</label>
@@ -9,6 +9,6 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" name="password" id="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Login in the company</button>
   </form>
 </div>
