--- a/views/company/register.hbs
+++ b/views/company/register.hbs
@@ -1,5 +1,5 @@
 <div class="mx-auto mt-4 w-25">
-  <form action="/user/registerAsCompany" method="POST">
+  <form action="/company/register" method="POST">
     <h2 class="text-center">Create new company</h2>
     <div class="form-group">
       <label for="email">Email address</label>
@@ -13,6 +13,6 @@
       <label for="email">Company name</label>
       <input type="text" class="form-control" id="name" name="name" placeholder="Enter company name...">
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary">Register the company</button>
   </form>
 </div>
