--- a/views/worker/login.hbs
+++ b/views/worker/login.hbs
@@ -1,5 +1,5 @@
 <div class="mx-auto mt-4 w-25">
-  <form action="/user/login" method="POST">
+  <form action="/worker/login" method="POST">
     <h2 class="text-center mb-4">Employees login</h2>
     <div class="form-group">
       <label for="email">Email address</label>
