--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,23 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/">{{ data.name }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
+                {{#if data }}
+                {{#if data.isCompany }}
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/registerAsCompany">Register company</a>
+                    <a class="nav-link" href="/worker/employees">Employees</a>
+                </li>
+                {{/if}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/login">Login</a>
+                    <a class="nav-link" href="/user/logout">Logout</a>
                 </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/company/register">Register company</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/company/login">Companies login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/worker/login">Employees login</a>
+                </li>
+                {{/if}}
             </ul>
         </div>
     </div>
