--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -15,7 +15,7 @@
                 {{#if data }}
                 {{#if data.isCompany }}
                 <li class="nav-item">
-                    <a class="nav-link" href="/worker/employees">Employees</a>
+                    <a class="nav-link" href="/worker/employees/{{data.companyId}}">Employees</a>
                 </li>
                 {{/if}}
                 <li class="nav-item">
