--- a/views/worker/employees.hbs
+++ b/views/worker/employees.hbs
@@ -1,12 +1,15 @@
 <div class="container mt-4">
     <div class="text-center mb-4 d-flex justify-content-between align-items-center">
         <h4 class="mb-4">Employees</h4>
+        <form class="form-inline" action="/worker/employees/{{data.companyId}}" method="POST">
+            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
         <a class="btn btn-primary" href="/worker/register/{{data.companyId}}">Register</a>
     </div>
     <table class="table table-striped">
         <thead>
             <tr>
-                <th scope="col">N</th>
                 <th scope="col">First name</th>
                 <th scope="col">Sirname</th>
                 <th scope="col">Lastname</th>
@@ -17,16 +20,17 @@
             </tr>
         </thead>
         <tbody>
+            {{#each employees }}
             <tr>
-                <th scope="row">1</th>
-                <td></td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td>@mdo</td>
-                <td>@mdo</td>
-                <td>@mdo</td>
-                <td>@mdo</td>
+                <td>{{ this.firstName }}</td>
+                <td>{{ this.sirName }}</td>
+                <td>{{ this.lastName }}</td>
+                <td>{{ this.position }}</td>
+                <td>{{ this.phone }}</td>
+                <td>{{ this.email }}</td>
+                <td>{{ this.department }}</td>
             </tr>
+            {{/each}}
         </tbody>
     </table>
 </div>
